export abstract class BaseApi {

}
